Got rid of "Who We Are" section

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!-- END section -->
 
 
-    <section class="pb_section pb_section_v1" data-section="about" id="section-about">
+    <!--section class="pb_section pb_section_v1" data-section="about" id="section-about">
       <div class="container">
         <div class="row">
           <div class="col-lg-5 pr-md-5 pr-sm-0">
