--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light bg-transparent" id="gtco-main-nav">
-    <div class="container"><a class="navbar-brand">Solution</a>
+    <div class="container"><a class="navbar-brand">Johnson Group</a>
         <button class="navbar-toggler" data-target="#my-nav" onclick="myFunction(this)" data-toggle="collapse"><span
                 class="bar1"></span> <span class="bar2"></span> <span class="bar3"></span></button>
         <div id="my-nav" class="collapse navbar-collapse">
@@ -47,11 +47,10 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h1> We promise to bring
-                    the best <span>solution</span> for
-                    your business. </h1>
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rhoncus turpis nisl. </p>
-                <a href="#">Contact Us <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
+                <h1> How the best<span>healthcare</span> providers
+                    and payers manage legal & compliance. </h1>
+                <p> We bring clarity to complex laws and regulations so you can focus on care. </p>
+                <a href="#">Get Started <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
             <div class="col-md-6">
                 <div class="card"><img class="card-img-top img-fluid" src="images/banner-img.png" alt=""></div>
             </div>
@@ -132,7 +131,7 @@
                         <div class="card text-center">
                             <div class="oval"><img class="card-img-top" src="images/web-design.png" alt=""></div>
                             <div class="card-body">
-                                <h3 class="card-title">Web Design</h3>
+                                <h3 class="card-title">Compliance & Ethics</h3>
                                 <p class="card-text">Nullam quis libero in lorem accumsan sodales. Nam vel nisi
                                     eget.</p>
                             </div>
@@ -140,7 +139,7 @@
                         <div class="card text-center">
                             <div class="oval"><img class="card-img-top" src="images/marketing.png" alt=""></div>
                             <div class="card-body">
-                                <h3 class="card-title">Marketing</h3>
+                                <h3 class="card-title">Business Law</h3>
                                 <p class="card-text">Nullam quis libero in lorem accumsan sodales. Nam vel nisi
                                     eget.</p>
                             </div>
@@ -150,7 +149,7 @@
                         <div class="card text-center">
                             <div class="oval"><img class="card-img-top" src="images/seo.png" alt=""></div>
                             <div class="card-body">
-                                <h3 class="card-title">SEO</h3>
+                                <h3 class="card-title">Network Contract Review</h3>
                                 <p class="card-text">Nullam quis libero in lorem accumsan sodales. Nam vel nisi
                                     eget.</p>
                             </div>
@@ -158,7 +157,7 @@
                         <div class="card text-center">
                             <div class="oval"><img class="card-img-top" src="images/graphics-design.png" alt=""></div>
                             <div class="card-body">
-                                <h3 class="card-title">Graphics Design</h3>
+                                <h3 class="card-title">General Counsel</h3>
                                 <p class="card-text">Nullam quis libero in lorem accumsan sodales. Nam vel nisi
                                     eget.</p>
                             </div>
@@ -346,7 +345,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid gtco-news" id="news">
+<!--div class="container-fluid gtco-news" id="news">
     <div class="container">
         <h2>Latest News & Articles</h2>
         <div class="owl-carousel owl-carousel2 owl-theme">
@@ -418,7 +417,7 @@
             </div>
         </div>
     </div>
-</div>
+</div-->
 <footer class="container-fluid" id="gtco-footer">
     <div class="container">
         <div class="row">
@@ -456,16 +455,16 @@
                     <div class="col-6">
                         <h4>Services</h4>
                         <ul class="nav flex-column services-nav">
-                            <li class="nav-item"><a class="nav-link" href="#">Web Design</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Graphics Design</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">App Design</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">SEO</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Marketing</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Analytic</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Compliance & Ethics</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Healthcare Law</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Contract Negotiation</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">HIPAA Privacy</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Internal Audits</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">General Counsel</a></li>
                         </ul>
                     </div>
                     <div class="col-12">
-                        <p>&copy; 2019. All Rights Reserved. Design by <a href="https://gettemplates.co" target="_blank">GetTemplates</a>.</p>
+                        <p>&copy; 2019. All Rights Reserved. Made with <a href="https://gettemplates.co" target="_blank">love</a> in Minneapolis.</p>
                     </div>
                 </div>
             </div>
