--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h1> How the best<span>healthcare</span> providers
+                <h1> How the best <span>healthcare</span> providers
                     and payers manage legal & compliance. </h1>
                 <p> We bring clarity to complex laws and regulations so you can focus on care. </p>
                 <a href="#">Get Started <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
@@ -88,7 +88,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-5">
+            <!--div class="col-md-5">
                 <h2> We are a Creative Digital
                     Agency & Marketing Experts </h2>
                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rhoncus turpis nisl, vitae dictum mi
@@ -197,7 +197,7 @@
             </image>
 
         </svg>
-        <div class="row">
+        <!--div class="row">
             <div class="col-3">
                 <div class="card">
                     <div class="card-body">
@@ -279,7 +279,7 @@
             </div>
         </div>
     </div>
-</div>
+<-->/div>
 <div class="container-fluid gtco-features-list">
     <div class="container">
         <div class="row">
