--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
                                       </clipPath> -->
 
-            <path fill-rule="evenodd"  fill="url(#PSgrad_03)"
+            <!--path fill-rule="evenodd"  fill="url(#PSgrad_03)"
                   d="M98.891,386.002 L1527.942,380.805 C1581.806,380.610 1599.093,335.367 1570.005,284.353 L1480.254,126.948 C1458.704,89.153 1408.314,59.820 1366.025,57.550 L298.504,0.261 C238.784,-2.944 166.619,25.419 138.312,70.265 L16.944,262.546 C-24.214,327.750 12.103,386.317 98.891,386.002 Z"></path>
 
             <clipPath id="ctm" fill="none">
@@ -192,7 +192,7 @@
             </clipPath>
 
             <!-- xlink:href for modern browsers, src for IE8- -->
-            <image  clip-path="url(#ctm)" xlink:href="images/word-map.png" height="800px" width="100%" class="svg__image">
+            <!--image  clip-path="url(#ctm)" xlink:href="images/word-map.png" height="800px" width="100%" class="svg__image">
 
             </image>
 
@@ -279,7 +279,7 @@
             </div>
         </div>
     </div>
-<-->/div>
+</div-->
 <div class="container-fluid gtco-features-list">
     <div class="container">
         <div class="row">
