--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     and payers manage legal & compliance. </h1>
                 <p> We bring clarity to complex laws and regulations so you can focus on care. </p>
                 <a href="#">Get Started <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
-            <div class="col-md-6">
+            <!--div class="col-md-6">
                 <div class="card"><img class="card-img-top img-fluid" src="images/banner-img.png" alt=""></div>
             </div>
         </div>
