--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
                         </svg>
                         <!-- *************-->
 
-                        <svg width="100%" viewBox="0 0 700 500">
+                        <!--svg width="100%" viewBox="0 0 700 500">
                             <clipPath id="clip-path">
                                 <path d="M89.479,0.180 L512.635,25.932 C568.395,29.326 603.115,76.927 590.357,129.078 L528.827,380.603 C518.688,422.048 472.661,448.814 427.190,443.300 L73.350,400.391 C32.374,395.422 -0.267,360.907 -0.002,322.064 L1.609,85.154 C1.938,36.786 40.481,-2.801 89.479,0.180 Z"></path>
                             </clipPath>
                             <!-- xlink:href for modern browsers, src for IE8- -->
-                            <image clip-path="url(#clip-path)" xlink:href="images/learn-img.jpg" width="100%"
+                            <!--image clip-path="url(#clip-path)" xlink:href="images/learn-img.jpg" width="100%"
                                    height="465" class="svg__image"></image>
                         </svg>
                     </div>
