--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="container-fluid gtco-features-list">
                     <div class="container">
                         <div class="row">
@@ -120,13 +120,13 @@
                 </div>
 
 
-            <!--div class="col-md-6">
+            <div class="col-md-6">
                 <div class="card"><img class="card-img-top img-fluid" src="images/banner-img.png" alt=""></div>
             </div>
         </div>
     </div>
 </div>
-<div class="container-fluid gtco-feature" id="services">
+<!--div class="container-fluid gtco-feature" id="services">
     <div class="container">
         <div class="row">
             <div class="col-md-7">
