--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>
     </div>
 </div>
-<!--div class="container-fluid gtco-feature" id="services">
+<div class="container-fluid gtco-feature" id="services">
     <div class="container">
         <div class="row">
             <div class="col-md-7">
