--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#intro" class="scrollto">BizPage</a></h1>
+        <h1><a href="#intro" class="scrollto">Johnson Group Law</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="#intro"><img src="assets/img/logo.png" alt=""></a>-->
       </div>
