--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="carousel-background"><img src="assets/img/intro-carousel/1.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>A Law company exclusively focused on Healthcare & Regulatory Compliance.</h2>
+                <h2>A Law Firm exclusively focused on Healthcare & Regulatory Compliance.</h2>
                 <p>Compliance Counsel for healthcare organizations.</p>
                 <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
               </div>
