Updated carousel texts

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="carousel-background"><img src="assets/img/intro-carousel/1.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>A Law Firm exclusively focused on Healthcare & Regulatory Compliance.</h2>
+                <h2>A Law Firm focused on Healthcare & Regulatory Compliance.</h2>
                 <p>Compliance Counsel for healthcare organizations.</p>
                 <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
               </div>
@@ -92,8 +92,8 @@
             <div class="carousel-background"><img src="assets/img/intro-carousel/2.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>At vero eos et accusamus</h2>
-                <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut.</p>
+                <h2>Imbedded Compliance Counsel</h2>
+                <p>Work with experienced compliance counsel to build an effective compliance program.</p>
                 <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
               </div>
             </div>
@@ -103,8 +103,8 @@
             <div class="carousel-background"><img src="assets/img/intro-carousel/3.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>Temporibus autem quibusdam</h2>
-                <p>Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt omnis iste natus error sit voluptatem accusantium.</p>
+                <h2>Imbedded HIPAA Privacy Officer</h2>
+                <p>Build a Privacy Program and secure protected health information.</p>
                 <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
               </div>
             </div>
@@ -114,8 +114,8 @@
             <div class="carousel-background"><img src="assets/img/intro-carousel/4.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>Nam libero tempore</h2>
-                <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum.</p>
+                <h2>Imbedded Auditor</h2>
+                <p>Due Dilligence.  Stress test your operations and avoid costly regulatory findings</p>
                 <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
               </div>
             </div>
@@ -125,8 +125,8 @@
             <div class="carousel-background"><img src="assets/img/intro-carousel/5.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>Magnam aliquam quaerat</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h2>General Counsel Package</h2>
+                <p>Ask general business and healthcare law questions. Contract drafting, negotiation and review. Great for small to mid-size organizations and practices.</p>
                 <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
               </div>
             </div>
