got rid of skills and facts sections

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       <div class="container">
 
         <header class="section-header wow fadeInUp">
-          <h3>Traditional A La Carte Services</h3>
+          <h3>Traditional Services</h3>
           <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus, ad pro quaestio laboramus. Ei ubique vivendum pro. At ius nisl accusam lorenta zanos paradigno tridexa panatarel.</p>
         </header>
 
@@ -290,7 +290,7 @@
 
     <!-- ======= Skills Section ======= -->
     <section id="skills">
-      <div class="container">
+      <!--div class="container">
 
         <header class="section-header">
           <h3>Our Skills</h3>
@@ -329,7 +329,7 @@
     </section><!-- End Skills Section -->
 
     <!-- ======= Facts Section ======= -->
-    <section id="facts" class="wow fadeIn">
+    <!--section id="facts" class="wow fadeIn">
       <div class="container">
 
         <header class="section-header">
