--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="carousel-background"><img src="assets/img/intro-carousel/2.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>Imbedded Compliance Counsel</h2>
+                <h2>Embedded Compliance Counsel</h2>
                 <p>Work with experienced compliance counsel to build an effective compliance program.</p>
                 <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
               </div>
@@ -103,7 +103,7 @@
             <div class="carousel-background"><img src="assets/img/intro-carousel/3.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>Imbedded HIPAA Privacy Officer</h2>
+                <h2>Embedded HIPAA Privacy Officer</h2>
                 <p>Build a Privacy Program and secure protected health information.</p>
                 <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
               </div>
@@ -114,7 +114,7 @@
             <div class="carousel-background"><img src="assets/img/intro-carousel/4.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>Imbedded Auditor</h2>
+                <h2>Embedded Auditor</h2>
                 <p>Due Dilligence.  Stress test your operations and avoid costly regulatory findings</p>
                 <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
               </div>
@@ -196,7 +196,7 @@
               </div>
               <h2 class="title"><a href="#">Compliance Counsel Package</a></h2>
               <p>
-                Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                A Compliance Attorney available to stand up an effective compliance program and advice on a host of regulatory issues.
               </p>
             </div>
           </div>
@@ -209,7 +209,7 @@
               </div>
               <h2 class="title"><a href="#">Internal Auditor Package</a></h2>
               <p>
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+                Audit professionals capable of identifying gaps and ensuring you avoid costly regulatory findings and government investigations.
               </p>
             </div>
           </div>
@@ -222,7 +222,7 @@
               </div>
               <h2 class="title"><a href="#">General Counsel Package</a></h2>
               <p>
-                Nemo enim ipsam voluptatem quia voluptas sit aut odit aut fugit, sed quia magni dolores eos qui ratione voluptatem sequi nesciunt Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.
+                Enjoy the benefit of a General Counsel On-Demand.
               </p>
             </div>
           </div>
