--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
     </section><!-- End Testimonials Section -->
 
     <!-- ======= Team Section ======= -->
-    <section id="team">
+    <!--section id="team">
       <div class="container">
         <div class="section-header wow fadeInUp">
           <h3>Team</h3>
@@ -723,7 +723,7 @@
             <div class="contact-address">
               <i class="ion-ios-location-outline"></i>
               <h3>Address</h3>
-              <address>A108 Adam Street, NY 535022, USA</address>
+              <address>Minneapolis, Minnesota, USA</address>
             </div>
           </div>
 
@@ -731,7 +731,7 @@
             <div class="contact-phone">
               <i class="ion-ios-telephone-outline"></i>
               <h3>Phone Number</h3>
-              <p><a href="tel:+155895548855">+1 5589 55488 55</a></p>
+              <p><a href="tel:+155895548855">248-229-1857</a></p>
             </div>
           </div>
 
@@ -805,10 +805,10 @@
             <h4>Contact Us</h4>
             <p>
               A108 Adam Street <br>
-              New York, NY 535022<br>
+              Minneapolis, MN 535022<br>
               United States <br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              <strong>Phone:</strong> 248-229-1857<br>
+              <strong>Email:</strong> johnsongrpconsulting@gmail.com<br>
             </p>
 
             <div class="social-links">
@@ -823,7 +823,7 @@
 
           <div class="col-lg-3 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna veniam enim veniam illum dolore legam minim quorum culpa amet magna export quem marada parida nodela caramase seza.</p>
+            <p>Get healthcare industry updates and regulatory analysis.</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
@@ -835,7 +835,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>Johnson Group</strong>. All Rights Reserved
+        &copy; Copyright 2020 <strong>Johnson Group</strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!--
