testing look w/o second section

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   <main id="main">
 
     <!-- ======= Featured Services Section Section ======= -->
-    <section id="featured-services">
+    <!--section id="featured-services">
       <div class="container">
         <div class="row">
 
